Fix issue with bottom bar
temporary disbable transition for a specific case. If bar is hidden and
css class is hidding then do nothing because bar  is already not visible

--- a/demo-mobile/css/main.css
+++ b/demo-mobile/css/main.css
@@ -182,6 +182,7 @@ margin-top: 22px;
   -moz-transition:all linear 0.5s;
   -o-transition:all linear 0.5s;
   transition:all linear 0.5s;
+
   display:block !important;
   opacity:0;
   bottom: 0px;
@@ -199,8 +200,9 @@ margin-top: 22px;
   bottom: 0px;
 }
 
-.bottombar.ng-hide{
-  display: none;
+.bottombar.ng-hide.ng-hide-add.ng-hide-add-active{
+  transition:none;
+  opacity: 0;
 }
 
 /*
